--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     </div>
 
     <div class="content">
-        <h3> I am Dimple Soni  & i am a font-end developer </h3>
+        <h3> I am Dimple Soni  & i am a front-end developer </h3>
         <p>I'am from Ratlam(Madhya-Pradesh) and currently living in Indore.
             I'm doing engineering in computer science from Medi-caps University and my specialization is Data-Science. 
             I secured 92% in 10th standard and 85% in 12th standard, And currenty in engineering my aggrecade score is 9.63 cgpa. </p>
@@ -199,7 +199,7 @@
         <div class="icons">
             <i class="fas fa-envelope"></i>
             <h3>my email</h3>
-            <p>sonidimple228@gmail.com</p>
+          <p>sonidimple228@gmail.com</p> 
             <p>en20cs303020@medicaps.ac.in</p>
         </div>
 
@@ -209,7 +209,7 @@
             <p>08435429403</p>
         </div>
 
-
+ 
     </div>
 
     <div class="row">
